feat: Move the plugin to use langchain4j (#32)
Signed-off-by: Michael Trimarchi <michael@amarulasolutions.com>
Co-authored-by: Xianpeng Shen <xianpeng.shen@gmail.com>
Co-authored-by: Copilot <175728472+Copilot@users.noreply.github.com>